fixed search results preview scroll, positioning, and overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -45,3 +45,8 @@ body, html {
   .results-page {
     margin: 80px 40px 80px 40px;
   }
+
+  .search-result-row {
+    max-width: 230px;
+    cursor: pointer;
+  }
